add tests for ijkstraShortestPathSearcher and extract interface ShortestPathSearcher

--- a/Test_2/GraphLibrary.Test.Unit/GraphLibrary.Test.Unit.csproj
+++ b/Test_2/GraphLibrary.Test.Unit/GraphLibrary.Test.Unit.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DijkstraShortestPathSearcherTests.cs" />
     <Compile Include="MinimumSpanningTreeSearchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShortestPathSearcherTests.cs" />
