--- a/Test_2/GraphLibrary.Test.Unit/GraphLibrary.Test.Unit.csproj
+++ b/Test_2/GraphLibrary.Test.Unit/GraphLibrary.Test.Unit.csproj
@@ -45,15 +45,21 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BreadthFirstSearchTests.cs" />
+    <Compile Include="DeepFirstSearchTests.cs" />
     <Compile Include="DijkstraShortestPathSearcherTests.cs" />
+    <Compile Include="EulerianPathSearcherTests.cs" />
+    <Compile Include="GraphTestExtensions.cs" />
     <Compile Include="MinimumSpanningTreeSearchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShortestPathSearcherTests.cs" />
+    <Compile Include="FordBellmanShortestPathSearcherTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GraphLibrary\GraphLibrary.csproj">
