--- a/Test_2/GraphLibrary/GraphLibrary.csproj
+++ b/Test_2/GraphLibrary/GraphLibrary.csproj
@@ -39,10 +39,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BreadthFirstSearch.cs" />
-    <Compile Include="DeepFirstSearch.cs" />
+    <Compile Include="ThreeSearcher\BreadthFirstSearch.cs" />
+    <Compile Include="ThreeSearcher\DeepFirstSearcher.cs" />
     <Compile Include="ShortestPathSearcher\DijkstraShortestPathSearcher.cs" />
-    <Compile Include="EulerianPathSearch.cs" />
+    <Compile Include="EulerianPathSearcher.cs" />
     <Compile Include="Graph\BaseGraph.cs" />
     <Compile Include="Graph\DirectedGraph.cs" />
     <Compile Include="Graph\Edge.cs" />
@@ -51,9 +51,11 @@
     <Compile Include="Graph\IGraph.cs" />
     <Compile Include="Graph\ISimpleGraph.cs" />
     <Compile Include="ShortestPathSearcher\IShortestPathSearcher.cs" />
-    <Compile Include="MinimumSpanningTreeSearch.cs" />
+    <Compile Include="ThreeSearcher\IThreeSearcher.cs" />
+    <Compile Include="ThreeSearcher\MinimumSpanningTreeSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShortestPathSearcher\FordBellmanShortestPathSearcher.cs" />
+    <Compile Include="TopologicalSorting.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
