--- a/Test_2/GraphLibrary.Test.Unit/GraphLibrary.Test.Unit.csproj
+++ b/Test_2/GraphLibrary.Test.Unit/GraphLibrary.Test.Unit.csproj
@@ -60,6 +60,7 @@
     <Compile Include="MinimumSpanningTreeSearchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FordBellmanShortestPathSearcherTests.cs" />
+    <Compile Include="TopologicalSortingTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GraphLibrary\GraphLibrary.csproj">
